--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
+{
+  "name": "ai",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "@google/generative-ai": "^0.1.0"
+  }
+}
 
