--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "ai",
+  "name": "ai-backend",
   "version": "1.0.0",
+  "description": "Backend for AI Chat with Google Gemini",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.14.0",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "@google/generative-ai": "^0.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
-
